k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp2-ing
  namespace: mp2
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: yolo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yolo-cls-svc
            port:
              number: 80
  - host: hello.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-svc
            port:
              number: 80
